# BK-SAMs-Agent

./: .dockerignore  .gitignore  AWS_S3_SETUP.md  Dockerfile  README.md  fly.toml  main.py  pyproject.toml
src/agents/: agent.py  agent_config.py
src/api/: chat.py  rag.py
src/cache/: cache_manager.py
src/database/: database_connect.py
src/middleware/: authorization.py
src/rag/: activity_controller.py  processing.py
src/repository/: activity_repo.py  chunk_repo.py  conversation_repo.py
src/service/: activity_service.py  chunk_service.py  conversation_service.py
src/testing/: rag_chunks_dataset_prepare.py
src/tools/: tools.py
src/util/: chat_request.py  filter_history.py
src/websocket/: websocketManager.py
