[project]
name = "bk-sams-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "asyncpg>=0.31.0",
    "chonkie>=1.5.4",
    "docling>=2.71.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "logfire[fastapi]>=4.25.0",
    "openai>=2.16.0",
    "pydantic-ai>=1.61.0",
    "python-multipart>=0.0.22",
    "sentence-transformers>=5.2.2",
    "uvicorn>=0.40.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
