[project]
name = "bk-sams-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "asyncpg>=0.31.0",
    "boto3>=1.42.63",
    "chonkie>=1.5.4",
    "docling>=2.71.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "langfuse>=4.0.0",
    "logfire[fastapi]>=4.25.0",
    "openai>=2.16.0",
    "pydantic-ai>=1.61.0",
    "python-multipart>=0.0.22",
    "redis>=7.3.0",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]

[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
